blueprints/manufacturing-distribution/salesforce/force-app/main/default/objects/Trade_Order__c/Trade_Order__c.object-meta.xml
<CustomObject>
    <description>One customer purchase order accepted by the business. Tracks acknowledgement, dispatch and payment. This is the delivery side. It stays separate from the quote and the deal.</description>
    <label>Order</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>