blueprints/manufacturing-distribution/salesforce/force-app/main/default/objects/Trade_Order__c/fields/Accepted_quote__c.field-meta.xml
<CustomField>
    <fullName>Accepted_quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links an order to the quote it came from, so quote-to-order conversion can be measured.</description>
    <label>Accepted quote</label>
    <referenceTo>Trade_Quote__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders_Accepted_quote</relationshipName>
    <type>Lookup</type>
</CustomField>