blueprints/manufacturing-distribution/salesforce/force-app/main/default/objects/Trade_Order__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Gives the full order history for an account.</description>
    <label>Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders_Company</relationshipName>
    <type>Lookup</type>
</CustomField>