blueprints/manufacturing-distribution/salesforce/force-app/main/default/objects/Trade_Order__c/fields/Customer_po__c.field-meta.xml
<CustomField>
    <fullName>Customer_po__c</fullName>
    <description>The customer's purchase order reference, used on invoices and to match queries.</description>
    <label>Customer PO number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>