blueprints/manufacturing-distribution/salesforce/force-app/main/default/objects/Trade_Order__c/fields/Delivered_date__c.field-meta.xml
<CustomField>
    <fullName>Delivered_date__c</fullName>
    <description>Date the goods reached the customer. Compared with the promised date for on-time delivery.</description>
    <label>Delivered date</label>
    <type>Date</type>
</CustomField>