blueprints/manufacturing-distribution/salesforce/force-app/main/default/objects/Trade_Order__c/fields/Order_date__c.field-meta.xml
<CustomField>
    <fullName>Order_date__c</fullName>
    <description>Date the customer order was accepted.</description>
    <label>Order date</label>
    <type>Date</type>
</CustomField>