blueprints/manufacturing-distribution/salesforce/force-app/main/default/objects/Trade_Order__c/fields/Order_type__c.field-meta.xml
<CustomField>
    <fullName>Order_type__c</fullName>
    <description>Whether the order is a first order, a repeat order or a call-off against a standing agreement.</description>
    <label>Order type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First order</fullName>
            </value>
            <value>
                <fullName>Repeat order</fullName>
            </value>
            <value>
                <fullName>Call-off</fullName>
            </value>
            <value>
                <fullName>Sample order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>