blueprints/manufacturing-distribution/salesforce/force-app/main/default/objects/Trade_Order__c/fields/Order_value__c.field-meta.xml
<CustomField>
    <fullName>Order_value__c</fullName>
    <description>Total order value excluding tax.</description>
    <label>Order value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>