blueprints/manufacturing-distribution/salesforce/force-app/main/default/objects/Trade_Order__c/fields/Promised_date__c.field-meta.xml
<CustomField>
    <fullName>Promised_date__c</fullName>
    <description>Delivery date promised to the customer. Late orders are reported on.</description>
    <label>Promised date</label>
    <type>Date</type>
</CustomField>