blueprints/manufacturing-distribution/salesforce/force-app/main/default/objects/Trade_Order__c/listViews/Orders_in_flight.listView-meta.xml
<ListView>
    <fullName>Orders_in_flight</fullName>
    <columns>NAME</columns>
    <columns>Promised_date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Delivered,Invoiced,Cancelled</value>
    </filters>
    <label>Orders in flight</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>